messing around context and code structure

--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <form action="/oauth2/github">
-    <input type="submit" name="Submit" value="Submit">
+    <input type="submit" name="Submit" value="Login with Github">
   </form>
 
 </body>
